--- a/backup.service
+++ b/backup.service
@@ -5,5 +5,5 @@ After=gvfs-goa-volume-monitor.service
   
 
 [Service]
-ExecStart=~/.config/systemd/user/backup.bash
+ExecStart="/etc/systemd/user/backup.bash"
 Type=oneshot
